Enhance TUI components with new methods and improved event handling